--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   min-width: 100%;
+  background-color: #1C1C21;
 }
 
 .headerContainer {
@@ -7,6 +8,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .menuContainer {
