--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -3,17 +3,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 720px;
+  max-width: 720px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
   align-items: center;
   border-radius: 40px;
   border: 1px solid rgba(76, 76, 255, 0.20);
   background: #1C1C21;
   z-index: 2;
+  overflow: hidden;
 }
 
 .modalActive {
@@ -22,7 +22,7 @@
 
 .closeIcon {
   position: absolute;
-  top: 17.5%;
+  top: 9.5%;
   right: 6%;
   z-index: 10;
 }
