--- a/src/components/Order-details/Order-details.module.css
+++ b/src/components/Order-details/Order-details.module.css
@@ -1,5 +1,6 @@
-.container {
+.modalContainer {
   position: relative;
+  text-align: center;
 }
 
 .list {
@@ -23,6 +24,11 @@
   text-align: center;
 }
 
-.iconModalDone {
-  background-image: url("../../images/icon-modal-done.png");
+.textEffect {
+  text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25), 0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
+
+}
+
+.textColor {
+  color: #8585AD;
 }
