--- a/src/components/Layout-header/Layout-header.module.css
+++ b/src/components/Layout-header/Layout-header.module.css
@@ -24,8 +24,21 @@
 
 .navContainer {
   display: flex;
+  flex-direction: row;
 }
 
 .logo {
   margin-left: 112px;
+}
+
+.active {
+  color: #F2F2F3;
+}
+
+.inactive {
+  color: #8585AD;
+}
+
+.navContainer a:-webkit-any-link {
+  text-decoration: none;
 }
