--- a/src/components/Layout-header/Layout-header.module.css
+++ b/src/components/Layout-header/Layout-header.module.css
@@ -33,10 +33,12 @@
 
 .active {
   color: #F2F2F3;
+  display: flex;
 }
 
 .inactive {
   color: #8585AD;
+  display: flex;
 }
 
 .navContainer a:-webkit-any-link {
