--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 1280px;
-  margin: 120px auto 0;
+  margin: 0 auto 0;
 }
 
 .text {
@@ -17,20 +17,9 @@
   gap: 60px;
 }
 
-.profileInfo{
-  margin-right: 400px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
 .navList {
+  margin-top: 120px;
   max-width: 320px;
-}
-
-.buttonsContainer {
-  display: flex;
-  justify-content: flex-end;
 }
 
 nav a:-webkit-any-link {
@@ -42,9 +31,5 @@ nav a:-webkit-any-link {
 }
 
 .inactive {
-  color: #8585AD;
-}
-
-.input::placeholder {
   color: #8585AD;
 }
