--- a/src/pages/Constructor/Constructor.module.css
+++ b/src/pages/Constructor/Constructor.module.css
@@ -2,7 +2,7 @@
   min-width: max-content;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /*justify-content: center;*/
   max-width: 1280px;
   margin: 0 auto;
 }
